--- a/styles.css
+++ b/styles.css
@@ -918,6 +918,20 @@ h3{ margin-top: -15px !important; }
     overflow-y: auto;
     overflow-x: hidden;
 }
+    /* background:rgba(0,255,255,.8);
+
+    animation-name: rotarColor;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes rotarColor{
+    0%{ background:rgba(0,255,255,.8); }
+    33%{ background:rgba(255,255,0,.8); }
+    66%{ background:rgba(255,0,255,.8); }
+    99%{ background:rgba(0,255,255,.8); }
+} */
+    
 
 .imgmuestra {
     width: 100%;
